# activity-analyser

./: .devenv.flake.nix  .envrc  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  Cargo.toml  README.md  devenv.nix  flake.nix
.github/workflows/: integrate.yaml
src/: activity.rs  activity_analysis.rs  athlete.rs  daily_stats.rs  lib.rs  main.rs  measurements.rs  metrics.rs  peak.rs
tests/fixtures/: Activity.fit
