[package]
name = "activity-analyser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.31", features = ["clock"] }
derive_more = "0.99.17"
fitparser = "0.6.1"
num-integer = "0.1.45"

[dev-dependencies]
assertables = "7.0.1"
proptest = "1.3.1"
