[package]
name = "activity-analyser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.38", features = ["clock"] }
clap = { version = "4.5.23", features = ["derive"] }
derive_more = "0.99.18"
fitparser = "0.6.1"
num-integer = "0.1.46"
prettytable-rs = "0.10.0"
rayon = "1.10.0"
serde = { version = "1.0.215", optional = true }

[dev-dependencies]
assertables = "7.0.1"
proptest = "1.5.0"

[features]
default = ["serde"]
serde = ["dep:serde"]
